--- a/layers/mu4e/mu4e-todo.org
+++ b/layers/mu4e/mu4e-todo.org
@@ -4,7 +4,8 @@ CLOSED: [2015-08-12 Wed 19:59]
 * DONE Custom Bookmarks
 CLOSED: [2015-08-12 Wed 19:59]
 * TODO Homescreen
-* TODO Tag Transformation filters
+* DONE Tag Transformation filters
+CLOSED: [2015-08-12 Wed 21:48]
 - look to see if its possible to create more tag shortcuts similar to built
 in mu tags; ! -> /Important, $ -> Finance, lambda-symbol -> Programming, etc.
 
